# merk

./: .gitignore  .npmignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  index.js  package-lock.json  package.json  rustfmt.toml
.github/workflows/: ci.yml  lint.yml  rust.yml
benches/: encoding.rs  merk.rs  node.rs  ops.rs  proofs.rs  sparse_tree.rs
docs/: algorithms.md
rust/: Cargo.toml
rust/src/: lib.rs  main.rs  merk.rs  node.rs  raw.rs  sparse_tree.rs  store.rs
scripts/: pgo.sh
src/: common.js  error.rs  json.js  lib.rs  load.js  main.rs  merk.js  merk.rs  mutationStore.js  node.js  node.rs  owner.rs  proof.js  proof.rs  rewrite.rs  sparse_tree.rs  test_util.rs  transaction.js  tree.js  util.rs  verify.js  worker.rs  wrap.js
src/fetch/: mod.rs
src/merk/: chunks.rs  mod.rs  restore.rs  snapshot.rs
src/ops/: context.rs  mod.rs  mod_tree.rs  tree.rs  worker.rs
src/proof/: mod.rs
src/proofs/: bench.rs  chunk.rs  encoding.rs  mod.rs  query.rs  tree.rs  verify.rs
src/proofs/query/: map.rs  map_js.rs  mod.rs
src/test_utils/: crash_merk.rs  mod.rs  temp_merk.rs
src/tree/: commit.rs  debug.rs  encoding.rs  encoding_bench.rs  fuzz_tests.rs  hash.rs  iter.rs  kv.rs  link.rs  mod.rs  node.rs  ops.rs
src/tree/walk/: fetch.rs  mod.rs  owned.rs  owner.rs  ref_walker.rs  walker.rs
src/wrap/: mod.rs
test/: common.js  merk.js  mutationStore.js  node.js  serialize.js  verify.js  wrap.js
test/fixtures/: blockchat.json
tests/: fuzz.rs  merk.rs  node.rs  ops.rs  sparse_tree.rs  util.rs
tests/common/: mod.rs
