[package]
name = "merk"
description = "Merkle key/value store"
version = "1.0.0"
authors = ["Matt Bell <mappum@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
hashbrown = "0.13.2"

[dependencies.time]
version = "0.1.42"
optional = true

[dependencies.hex]
version = "0.4.2"
optional = true

[dependencies.colored]
version = "1.8.0"
optional = true

[dependencies.num_cpus]
version = "1.10.0"
optional = true

[dependencies.byteorder]
version = "1.3.2" 
optional = true

[dependencies.failure]
version = "0.1.6"
optional = true

[dependencies.ed]
version = "0.1.6"
optional = true

[dependencies.blake3]
version = "0.3.7"
optional = true

[dependencies.rand]
version = "0.8.3"
features = ["small_rng"]
optional = true

[dependencies.rocksdb]
git = "https://github.com/rust-rocksdb/rust-rocksdb"
version = "0.16.0"
rev = "v0.16.0"
default-features = false
optional = true

[dependencies.jemallocator]
version = "0.3.2"
features = ["disable_initial_exec_tls"]
optional = true

[features]
default = ["full", "verify"]
full = ["rand", "rocksdb", "time", "hex", "colored", "num_cpus", "byteorder", "failure", "ed", "blake3", "jemallocator"]
verify = ["ed", "failure", "blake3"]
