[package]
name = "merk"
description = "Merkle key/value store"
version = "2.0.0"
authors = ["Matt Bell <mappum@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
thiserror= "1.0.58"
sha2 = "0.10.8"
log = "0.4.21"

[dependencies.time]
version = "0.3.0,<0.3.25"
optional = true

[dependencies.hex]
version = "0.4.3"
optional = true

[dependencies.colored]
version = "2.1.0"
optional = true

[dependencies.num_cpus]
version = "1.16.0"
optional = true

[dependencies.byteorder]
version = "1.5.0"
optional = true

[dependencies.ed]
version = "0.3.0"
optional = true

[dependencies.rand]
version = "0.8.5"
features = ["small_rng"]
optional = true

[dependencies.rocksdb]
version = "0.22.0"
default-features = false
optional = true

[dependencies.jemallocator]
version = "0.5.4"
features = ["disable_initial_exec_tls"]
optional = true

[features]
default = ["full", "verify"]
full = ["rand", "rocksdb", "time", "hex", "colored", "num_cpus", "byteorder", "ed"]
verify = ["ed"]
